force-app/main/default/objects/RentDetail__c/RentDetail__c.object-meta.xml
<CustomObject>
    <label>家賃明細</label>
    <nameField>
        <displayFormat>RD-{000000000}</displayFormat>
        <label>家賃明細名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>