force-app/main/default/objects/RentDetail__c/fields/BankAccount__c.field-meta.xml
<CustomField>
    <fullName>BankAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>送金先口座</label>
    <referenceTo>BankAccount__c</referenceTo>
    <relationshipLabel>家賃明細</relationshipLabel>
    <relationshipName>RentDetail</relationshipName>
    <type>Lookup</type>
</CustomField>