force-app/main/default/objects/RentDetail__c/fields/BankAccountName__c.field-meta.xml
<CustomField>
    <fullName>BankAccountName__c</fullName>
    <formula>BankAccount__r.ContractorKana__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>口座名義</label>
    <type>Text</type>
</CustomField>