force-app/main/default/objects/RentDetail__c/fields/ExpenseItem__c.field-meta.xml
<CustomField>
    <fullName>ExpenseItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>費目</label>
    <referenceTo>ExpenseItem__c</referenceTo>
    <relationshipLabel>家賃明細</relationshipLabel>
    <relationshipName>RentDetail</relationshipName>
    <type>Lookup</type>
</CustomField>