force-app/main/default/objects/RentDetail__c/fields/HandlingType__c.field-meta.xml
<CustomField>
    <fullName>HandlingType__c</fullName>
    <label>取扱種別</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>振込</fullName>
            </value>
            <value>
                <fullName>変動費立替分</fullName>
            </value>
            <value>
                <fullName>個別送金分</fullName>
            </value>
            <value>
                <fullName>海外家主納税分</fullName>
            </value>
            <value>
                <fullName>公団引落分</fullName>
            </value>
            <value>
                <fullName>送金停止プール分</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>