force-app/main/default/objects/RentDetail__c/fields/Rent__c.field-meta.xml
<CustomField>
    <fullName>Rent__c</fullName>
    <label>家賃</label>
    <referenceTo>Rent__c</referenceTo>
    <relationshipLabel>家賃明細</relationshipLabel>
    <relationshipName>RentDetail</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>