force-app/main/default/objects/RentDetail__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Rent__c</columns>
    <columns>Amount__c</columns>
    <columns>BankAccount__c</columns>
    <columns>ExpenseItem__c</columns>
    <columns>TaxRate__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>